Improve proxy handling, implement search and alert
